--- a/paginajosebacss/index.html
+++ b/paginajosebacss/index.html
@@ -32,7 +32,7 @@
 <body>
 <table align="center"><!--Primera tabla de arriba-->
     <tr>
-        <td colspan="3"><p style="><font color="#990000">Menu</font></p></td>
+        <td colspan="3"><p><font color="#990000">Menu</font></p></td>
     </tr>
     <tr>
         <td><a href="index.html">Inicio</a></td>
