--- a/Ejercicioscss/ejerciciodiv.html
+++ b/Ejercicioscss/ejerciciodiv.html
@@ -8,18 +8,24 @@
     padding: 40px;
     margin: 30px;
     background-color: blue;
+    font-size: 14;
+    color:blueviolet;
 }
 
 .div2 {
     padding: 20px;
     margin: 10px;
     background-color: rgb(124, 0, 0);
+    font-size:20;
+    color:crimson;
 }
 
 .div3 {
     padding: 100px;
     margin: 100px;
     background-color: rgb(9, 78, 0);
+    font-size: 28;
+    color:darkseagreen;
 }
 
 .imagen1 {
