--- a/Ejercicioscss/ejerciciodiv.html
+++ b/Ejercicioscss/ejerciciodiv.html
@@ -4,16 +4,23 @@
 <meta charset="UTF-8">
 <title Página de Joseba></title>
 <style>
+
+.divfondo {
+    background-color:navy;
+    padding: 30px;
+}
+
 .div1 {
-    padding: 40px;
-    margin: 30px;
+    padding: 10px;
+    margin: 10px;
     background-color: blue;
     font-size: 14;
     color:blueviolet;
+    
 }
 
 .div2 {
-    padding: 20px;
+    padding: 50px;
     margin: 10px;
     background-color: rgb(124, 0, 0);
     font-size:20;
@@ -22,7 +29,7 @@
 
 .div3 {
     padding: 100px;
-    margin: 100px;
+    margin: 10px;
     background-color: rgb(9, 78, 0);
     font-size: 28;
     color:darkseagreen;
@@ -30,32 +37,43 @@
 
 .imagen1 {
     width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .imagen2 {
     width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .imagen3 {
     width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 </style>
 </head>
 <body>
-<div class="div1">
-<p>Este es un texto de prueba</p>
-<img src="img/ff.jpg" class="imagen1">
+<div class="divfondo">
+    <div class="div1">
+    <p>Este es un texto de prueba</p>
+    <img src="img/ff.jpg" class="imagen1">
 </div>
 
 <div class="div2">
-<p>Este es un texto de prueba</p>
-<img src="img/ff.jpg" class="imagen2">
+    <p>Este es un texto de prueba</p>
+    <img src="img/ff.jpg" class="imagen2">
 </div>
 
 <div class="div3">
-<p>Este es un texto de prueba</p>
-<img src="img/ff.jpg" class="imagen3">
+    <p>Este es un texto de prueba</p>
+    <img src="img/ff.jpg" class="imagen3">
+</div>
 </div>
 
 </body>
