--- a/segundaeva/cosa.html
+++ b/segundaeva/cosa.html
@@ -8,25 +8,30 @@
 <form action="echo.php">
   Usuario:<br>
   <input type="text" name="usuario" value="">
-  <br>
+<br>
   Contraseña:<br>
   <input type="password" name="contraseña" value="">
-  <br>
+<br>
+<p>Sexo</p>
   <input type="radio" name="gender" value="Hombre" checked> Hombre<br>
   <input type="radio" name="gender" value="Mujer"> Mujer<br>
-  <br>
+  <input type="radio" name="gender" value="Otro"> Otro<br>
+<br>
+  <p>Ideologia</p>
   <input type="checkbox" name="lado" value="Izquierda">Izquierda
-  <br>
+<br>
   <input type="checkbox" name="lado" value="Derecha">Derecha
-  <br>
-
+<br>
+<br>
+<p>Lugar</p>
   <select name="pueblos">
     <option value="Mendaro">Mendaro</option>
     <option value="Elgoibar">Elgoibar</option>
     <option value="Eibar">Eibar</option>
     <option value="Ermua">Ermua</option>
   </select>
-  <br><br>
+<br><br>
+<p>Ideas</p>
   <textarea name="texto" rows="4" cols="50">
     Mete tu idea aqui
   </textarea>
