--- a/segundaeva/cosa.html
+++ b/segundaeva/cosa.html
@@ -18,9 +18,9 @@
   <input type="radio" name="gender" value="Otro"> Otro<br>
 <br>
   <p>Ideologia</p>
-  <input type="checkbox" name="lado" value="Izquierda">Izquierda
+  <input type="checkbox" name="lado1" value="Izquierda">Izquierda
 <br>
-  <input type="checkbox" name="lado" value="Derecha">Derecha
+  <input type="checkbox" name="lado2" value="Derecha">Derecha
 <br>
 <br>
 <p>Lugar</p>
