--- a/juegojava/piepati.html
+++ b/juegojava/piepati.html
@@ -62,9 +62,9 @@
             document.getElementById("cpu").innerHTML = ('El ordenador elige ' + nombre [cpu]) ;
             document.getElementById("final").innerHTML = (texto[cpu][yo]);
 
-            console.log("HUMANO " + nombre[yo]);
+            /*console.log("HUMANO " + nombre[yo]);
             console.log("CPU " + nombre[cpu]);
-            console.log(resultado_texto[resultado]);
+            console.log(resultado_texto[resultado]);*/
     }
 </script>
 
