--- a/terceraevahtml/bootstrap/ejercicio1.html
+++ b/terceraevahtml/bootstrap/ejercicio1.html
@@ -18,8 +18,8 @@
 
 <div class="row">
 
-    <div class="col-sm-1" style="background-color:lavender;"><button type="button" class="btn btn-danger">PELIGRO</button></div>
-    <div class="col-sm-2" style="background-color:lavenderblush;">
+    <div class="col-sm-5"><button type="button" class="btn btn-danger">PELIGRO</button></div>
+    <div class="col-sm-2">
         <button type="button" class="btn btn-info">
             <a href="https://twitter.com/osakidetzaEJGV">Twitter oficial de osakidetza</a>
         </button>
