--- a/terceraevahtml/bootstrap/ejercicio1.html
+++ b/terceraevahtml/bootstrap/ejercicio1.html
@@ -26,15 +26,16 @@
     </div>
 
     <div class="row">
+      <div class="col-sm-1"></div>
         <div class="col-sm-5">
             <p class="text-white-50 bg-dark">Barton did feebly change man she afford square add. Want eyes by neat so just must. Past draw tall up face show rent oh mr. Required is debating extended wondered as do. New get described applauded incommode shameless out extremity but. Resembled at perpetual no believing is otherwise sportsman.</p>
         </div>
 
         <div class="col-sm-5" style="background-color:rgb(156, 0, 52);"><p class="text-black-85">Is do he dispatched cultivated travelling astonished. Melancholy am considered possession on collecting everything.</p>
         </div>
-        
-        <div class="col-sm-4">
-            <img src="ima/coro1.jpg" class="rounded-circle" alt="Corona"width="50%">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-3">
+            <img src="ima/coro1.jpg" class="rounded-circle float-left" alt="Corona"width="50%">
         </div>
 
         <div class="col-sm-4">
