--- a/terceraevahtml/bootstrap/formulario.html
+++ b/terceraevahtml/bootstrap/formulario.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container mt-3">
-<form action="echo.php">
+<form action="/echo.php">
     <select name="ciudad" class="custom-select mb-3">
     <option selected>De donde eres</option>
     <option value="mendaro">Mendaro</option>
