--- a/terceraevahtml/bootstrap/formulario.html
+++ b/terceraevahtml/bootstrap/formulario.html
@@ -10,50 +10,51 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<div>
+<form id="form1" action="echo.php" method="post" class="needs-validation" novalidate>
 <div class="container mt-3">
-<form action="/echo.php" method="post">
     <select name="ciudad" class="custom-select mb-3">
     <option selected>De donde eres</option>
     <option value="mendaro">Mendaro</option>
     <option value="elgoibar">Elgoibar</option>
     <option value="eibar">Eibar</option>
     </select>
+</div>
+
 
 
 <br>
-
+<div>
     <div class="custom-control custom-switch">
       <input type="checkbox" class="custom-control-input" id="switch1" name="viajas">
       <label class="custom-control-label" for="switch1">¿Viajas mucho?</label>
     </div>
     <br>
-  
+</div>
 
-
+<div>
 <label for="email">Email:</label>
 <input type="email" class="form-control" placeholder="Email" id="email">
 <label for="pwd">Contraseña:</label>
 <input type="password" class="form-control" placeholder="Contraseña" id="contra">
- 
+</div>
 
 <br>
 
-
 <div><p>¿Que comida del listado te gusta?</p></div>
-    <div class="custom-control custom-checkbox">
-      <input type="checkbox" class="custom-control-input" id="check1" name="patata">
-      <label class="custom-control-label" for="check1">Patatas</label><br>
-    </div>
-      <div class="custom-control custom-checkbox">
-      <input type="checkbox" class="custom-control-input" id="check2" name="tomate">
-      <label class="custom-control-label" for="check2">Tomate</label><br>
-      </div>
-      <div class="custom-control custom-checkbox">
-      <input type="checkbox" class="custom-control-input" id="check3" name="lechuga">
-      <label class="custom-control-label" for="check3">Lechuga</label><br>
-      </div>
-    </div>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="check1" name="patata">
+    <label class="custom-control-label" for="check1">Patatas</label><br>
+  </div>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="check2" name="tomate">
+    <label class="custom-control-label" for="check2">Tomate</label><br>
+  </div>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="check3" name="lechuga">
+    <label class="custom-control-label" for="check3">Lechuga</label><br>
+  </div>
+</div>
  
 
 <br>
@@ -71,12 +72,11 @@
     <span class="input-group-text">@gmail.com</span>
   </div>
 </div> 
-
-<button type="submit" class="btn btn-primary" value="enviar">Enviar</button>
-
+<button class="btn btn-primary" type="submit">Enviar</button>
 </div>
-</form>
 
+</form>
+</div>
 
 </body>
 </html>
