--- a/terceraevahtml/bootstrap/formulario.html
+++ b/terceraevahtml/bootstrap/formulario.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-<form id="form1" action="echo.php" method="post" class="needs-validation" novalidate>
+<form id="ciudad" action="echo.php">
 <div class="container mt-3">
     <select name="ciudad" class="custom-select mb-3">
     <option selected>De donde eres</option>
@@ -43,15 +43,15 @@
 
 <div><p>¿Que comida del listado te gusta?</p></div>
   <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="check1" name="patata">
+    <input type="checkbox" class="custom-control-input" id="check1" name="patata" value="patata">
     <label class="custom-control-label" for="check1">Patatas</label><br>
   </div>
   <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="check2" name="tomate">
+    <input type="checkbox" class="custom-control-input" id="check2" name="tomate" value="tomate">
     <label class="custom-control-label" for="check2">Tomate</label><br>
   </div>
   <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="check3" name="lechuga">
+    <input type="checkbox" class="custom-control-input" id="check3" name="lechuga" value="lechuga">
     <label class="custom-control-label" for="check3">Lechuga</label><br>
   </div>
 </div>
